--- a/SimpleNetwork/SimpleNetwork/SimpleNetwork.csproj
+++ b/SimpleNetwork/SimpleNetwork/SimpleNetwork.csproj
@@ -2,9 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Library for easy, flexible networking</Description>
+    <Authors>Kai</Authors>
+    <Company>KaiNet</Company>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/KaiNet-X/simple-network-library</RepositoryUrl>
+    <PackageTags>socket, sockets, network, networking, tcp, network, network library, networking library</PackageTags>
+    <PackageId>KaiNet.SimpleNetwork</PackageId>
+    <Version>1.0.1</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>false</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MessagePack" Version="2.2.60" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
