Greatly Improved thread safety and data reliability
Added packet header class in order to keep track of objects being sent over socket, added locks in order to syncronize threads. Data recieving much more reliable.

--- a/SimpleNetwork/SimpleNetwork/SimpleNetwork.csproj
+++ b/SimpleNetwork/SimpleNetwork/SimpleNetwork.csproj
@@ -7,9 +7,9 @@
     <Company>KaiNet</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/KaiNet-X/simple-network-library</RepositoryUrl>
-    <PackageTags>socket, sockets, network, networking, tcp, network, network library, networking library</PackageTags>
+    <PackageTags>socket, sockets, network, networking, tcp, network</PackageTags>
     <PackageId>KaiNet.SimpleNetwork</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
