--- a/SimpleNetwork/SimpleNetwork/SimpleNetwork.csproj
+++ b/SimpleNetwork/SimpleNetwork/SimpleNetwork.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Description>Library for easy, flexible networking</Description>
+    <Description>Library for easy, flexible networking. Large amount of control but works straight out of the box</Description>
     <Authors>Kai</Authors>
     <Company>KaiNet</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/KaiNet-X/simple-network-library</RepositoryUrl>
     <PackageTags>socket, sockets, network, networking, tcp, network</PackageTags>
     <PackageId>KaiNet.SimpleNetwork</PackageId>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
