--- a/SimpleNetwork/NetworkTester/NetworkTester.csproj
+++ b/SimpleNetwork/NetworkTester/NetworkTester.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <FileUpgradeFlags>40</FileUpgradeFlags>
+    <UpgradeBackupLocation>C:\Users\Kai\source\repos\SimpleNetwork\Backup\NetworkTester\</UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\SimpleNetwork\SimpleNetwork.csproj" />
   </ItemGroup>
-
 </Project>
