--- a/SimpleNetwork/NetworkTester/NetworkTester.csproj
+++ b/SimpleNetwork/NetworkTester/NetworkTester.csproj
@@ -9,4 +9,9 @@
   <ItemGroup>
     <ProjectReference Include="..\SimpleNetwork\SimpleNetwork.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.Windows.Forms.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
